--- a/教程.md
+++ b/教程.md
@@ -1,7 +1,17 @@
 # MQL4 零基础教程
+## MQL4 零基础教程
 
 1. 基础篇
-	1. 初识EA 
+	1. MQL简介
+		MQL4是内置于MT4平台的交易策略编程语言。MQL4语言的功能包括，创建自动交易系统，自定义指标，脚本和库。
+		MetaEditor是编辑MQL4语言的编辑器，可直接在MT4平台上打开。
+
+		为什么要使用EA?
+		1.实现交易策略
+		2.自助盯盘
+		3.策略验证与优化
+
+	2. 初识EA 
 		1. 变量
 		2. 结构
 		3. 下单函数
