--- a/教程.md
+++ b/教程.md
@@ -5,7 +5,9 @@ categories: MQL4课程
 toc: true
 ---
 
-<strong>本教程是属于视频课程的配套课程,结合视频课程，效果更佳</strong>
+<strong>本教程是属于视频课程的配套课程,结合视频课程，效果更佳，课程时间预计4小时</strong>
+
+第一节课视频
 
 ## 初识 EA智能交易 ##
 
@@ -19,17 +21,22 @@ EA交易的优点：
 
 - 电脑可以每天24小时不间断地监控行情，并在适当的时机和点位自动进出场，完全不用人工的干预，可以让您夜晚安枕入眠，白天安心从事别的工作。
 
-## 第一个脚本测试 ##
-- 外汇脚本
->脚本加载一次就执行一次，不需要卸载。
+### 制作第一个外汇脚本 ###
+只需1分钟，跟着视频的步骤来执行第一个EA程序吧
+``` 
+// 将下面的代码复制到脚本中，这是一个下单指令
+//这是个以当前价格当前货币对开0.1手多单且无止损止盈的下单脚本
 
-- 脚本的基本结构
+ OrderSend(Symbol(),OP_BUY,0.1,Ask,3,0,0,"多单",123,0,clrNONE);
+```
+第二节课视频
+
+## 编辑器操作 ##
+
+- 新建脚本
+ 脚本可以进行订单操作，在页面加载只执行一次，无需卸载。
 
 ``` 
-#property copyright "shiyingpan"
-#property link  "https://www.fxlab.cn"
-#property version   "1.00"
-#property strict
 void OnStart()
   {
 脚本主体
@@ -37,30 +44,56 @@ void OnStart()
 
 ```
 
- > 脚本的基本结构的前4行是系统自带的，可有可无。主要在于脚本主体内容的编写。
-
-- 简单的开单脚本
+- 新建指标
+  自定义指标的编写比较复杂，将在进阶课程中讲解。
+- 新建EA
 
 ```
-#property copyright "shiyingpan"
-#property link      "https://www.nowhere.com"
-#property version   "1.00"
-#property strict
-
-void OnStart()
+// EA初始化函数，在EA执行前需要确定的事情需要写在这个函数里面，比如网络连接是否正常，账户是否是确定账户等。
+int OnInit()
   {
-<font color='red' size=4>
-    OrderSend(Symbol(),OP_BUY,0.1,Ask,3,0,0,"多单",123,0,clrNONE);
+   return(INIT_SUCCEEDED);
   }
+
+// 这个函数是EA卸载时执行的代码，一般不用，但保留格式
+void OnDeinit(const int reason)
+  {
+
+  }
+
+// 程序的主体内容写在这个函数里面，这个函数在图表货币对每次报价的时候执行一次。如果报价不变就不会执行，即周末的时候，报价不变，代码也不会执行。
+void OnTick()
+  {
+
+  }
+
 ```
 
- >这是个以当前价格当前货币对开0.1手多单且无止损止盈的下单脚本
+- MQL4文件夹
 
+MQL4文件夹是MT4平台涉及智能交易的文件夹，其中EA，指标和脚本分别处于不同的文件夹中，放错位置将无法执行。
 
+	- Experts：存放EA
+	- Files  ：MQL4可以进行文件操作，文件一般会在这个文件夹中
+	- Images : 用不到
+	- Include：函数库文件夹，用于存放函数库文件，在写EA和脚本时可以调用这个文件中的函数
+	- Indicators：指标文件夹，存放指标
+	- Libraries ：动态链接库文件夹，借用动态链接库文件可扩展MQL4的功能
+	- Logs ：日志文件夹，运行EA的日志存放在这个地方
+	- Presets ：EA的参数可以保存，放在这个文件夹中
+	- Project ：用不到
+	- Scripts ：脚本文件夹，存放脚本 
+	
+- MetaEditor编辑器操作
+MetaEditor编辑器是专门用于编写MQL4语言的编辑器，需要掌握以下功能：
 
+	- 新建文档 : 创建新文件
+	- 编译文档 ： 编写写好的代码
+	- 查看编译信息 ： 查看错误信息，调试代码
+	- 打开导航栏  ：方便查找文件
+	- 查看帮助文件 ： 帮助操作
 
-
-
+第三节课视频
 ## 变量 ##
 变量,是指没有固定的值,在程序中可以改变的数。与之相对应的是不变量，即一旦设定，在整个程序中的值都不会变，也不允许改变。
 
@@ -74,21 +107,15 @@ void OnStart()
 - 变量名：是字母a-z,A-Z，数字0-9，以及“_”的组合，不能以字母开头。
 - 结束符：分号“;”。分号必须为英文分号，代码中所有字符（除注释）必须为英文字符。
 
-### 不变量的定义 ###
-不变量的定义，有两部分
+### 常量的定义 ###
+常量的定义，有三部分
 
-\#define 变量名
+\#define 常量名 常量值 
 
 - 不变量使用\#define定义
 - 不变量需在程序开始时定义。
 - 不需要结束符
 - 不变量的变量名，不能够再定义成变量
-
-
-
-
-
-
 
 ## 数据类型 ##
 ### 整数 ###
@@ -106,13 +133,11 @@ void OnStart()
 - 浮点数转化为整数： b=int(a);只保留整数部分
 - 浮点数转化为字符串： string c=DoubleToString(a，2);2表示保留2位小数
 
-
 ### 布尔量 ###
 布尔量是表示真假的量，只有True（真）和False（假）两种情况。
 
 布尔量的定义：bool a=True;
 布尔量一般不做类型转换。
-
 
 ### 字符串 ###
 字符串可以理解为一段文字，可以是英文或中文。
@@ -147,7 +172,6 @@ void OnStart()
 - 时间相加
 - 字符串相加
 
-
 ### 减 ###
 
 - 数字减
@@ -178,7 +202,7 @@ void OnStart()
 - && :逻辑与，左边和右边都为True(真)时，结果为True(真)，否则为False（假）
 - || :逻辑或，左边和右边都为False（假）时，结果为False（假），否则为True（真）。
 
-
+第4课
 ## 标示 ##
 程序中标示，包含自定义变量的名称，函数的名称等。标示的作用主要是便于读代码。
 - 良好的标示有助于读懂代码，修改代码。
@@ -199,6 +223,7 @@ void OnStart()
 程序中注释不会影响程序的运行。
 - 注释一行：使用"//"
 - 注释一段：使用"/* 注释内容 */"
+
 
 ## 函数 ##
 函数本质上是一段代码，只不过这段代码经常被使用或者这段代码实现特定的功能。函数并不是一定要用，用了有以下优势：
@@ -322,43 +347,4 @@ while循环是一直循环，只要条件满足就执行，在没有停止条件
 - 良好的书写格式，有助于理清思路，检验策略，查找错误，美观，这是基本功。
 - 多使用函数，对于一个功能块，使用一个函数代替。
 - 多次使用的字符串或数字，用一个标示符代替。
-
-=======
-# MQL4 零基础教程
-## MQL4 零基础教程
-
-1. 基础篇
-	1. MQL简介
-		MQL4是内置于MT4平台的交易策略编程语言。MQL4语言的功能包括，创建自动交易系统，自定义指标，脚本和库。
-		MetaEditor是编辑MQL4语言的编辑器，可直接在MT4平台上打开。
-
-		为什么要使用EA?
-		1.实现交易策略
-		2.自助盯盘
-		3.策略验证与优化
-
-	2. 初识EA 
-		1. 变量
-		2. 结构
-		3. 下单函数
-		4. 订单参数
-		5. 执行EA
-	2. 标识符
-	3. 保留字
-	4. 注释
-	5. 数据类型
-	6. 运算符
-	7. 表达式
-	8. 控制语句
-	9. 变量
-	10. 函数
-	11. 下单指令
-	12. 修改订单
-	13. 平仓
-	14. 删除订单
-	15. 选择订单
-	
-2. 进阶篇
-
-	
 
