--- a/问题与解答.md
+++ b/问题与解答.md
@@ -8,4 +8,5 @@ toc: true
 ## 我有问题怎么办 ## 
 如果你对课程、代码有疑问，或者发现课程中有错误的地方，欢迎咨询和指正。
 对于普遍或重要的问题，问提与答案会出现在此页。
-添加我们的微信公众号：，然后提出你的问题。
+
+在我的简书博客主页提出问题吧：[http://www.jianshu.com/p/dacd6429afe3](http://www.jianshu.com/p/dacd6429afe3 "简书博客")
